Fix tool-tip placement. Fix incorrect player width in theater mode with collapsed chat and a custom chat width set. Fix channel bar placement with minimize navigation. Fix player size when entering fullscreen with theater mode enabled. Fix minor bug in `has` method.

--- a/src/sites/twitch-twilight/modules/css_tweaks/styles/chat-width.scss
+++ b/src/sites/twitch-twilight/modules/css_tweaks/styles/chat-width.scss
@@ -2,7 +2,7 @@ body .whispers--theatre-mode.whispers--right-column-expanded {
 	right: var(--ffz-chat-width);
 }
 
-body .persistent-player--theatre,
+body .persistent-player--theatre:not([style*="width: 100%"]),
 body .channel-page__video-player--theatre-mode {
 	width: calc(100% - var(--ffz-chat-width)) !important;
 }
