--- a/src/sites/twitch-twilight/modules/css_tweaks/styles/minimal-navigation.scss
+++ b/src/sites/twitch-twilight/modules/css_tweaks/styles/minimal-navigation.scss
@@ -20,8 +20,4 @@
 			}
 		}
 	}
-
-	.channel-header {
-		top: -4rem;
-	}
 }
